@@ -34,6 +34,7 @@ The default role definitions in the `roles.yml` file may need to be changed to e
 applications such as Marvel and Kibana. Any role changes will be found in `roles.yml.new` after upgrading to the new
 version of Shield. We recommend copying the changes listed below to your `roles.yml` file.
 
+* added[2.0.0-beta2] The permission on all the roles are updated to the verbose format to make it easer to enable field level and document level security.
 * added[1.1.0] `kibana4_server` role added that defines the minimum set of permissions necessary for the Kibana 4 server.
 * added[1.0.1] `kibana4` role updated to work with new features in Kibana 4 RC1
 
